--- a/application/public/themes/own/css/estil.css
+++ b/application/public/themes/own/css/estil.css
@@ -1,19 +1,66 @@
-@font-face
-{
-font-family: myFirstFont;
-src: url(font/Capsuula.ttf);
-}
 *{
 	margin:0;
 	padding:0;
 	
 
 }
+#header{
+ 	background-color:darkkhaki;
+ 	color:#FFFFFF;
+ 	
+}
+#header h1{
+    text-align: center;
+}
+.barra{
+    background-color: darkslategray;
+    
+}
+.capsa{
+    display:inline-block;
+    width:100%;
+    height: 30px;
+    
+    font-size: 90%;
+    font-variant: small-caps;
+    background-color: darkslategray;
+}
+.capsa ul{list-style: none;text-align: right;background-color: darkslategray; display: inline-block;}
+.capsa ul li{display: inline-block;}
+.capsa ul li a{color:#FFF;text-decoration: none;};
+.capsa ul li a:hover {color:#000;}
+.logindex{
+    float: right;
+    
+   
+}
+.capsa .logindex input[type=text],input[type=password]{
+   width:10em;
+   font-size:80%;
+   background-color: darkkhaki;
+   margin-top: 4px;
+}
+.capsa .logindex input[value]{
+    color:grey;
+}
+.capsa .logindex input[type=submit]{
+    background:no-repeat center darkkhaki;
+    cursor:pointer;
+    //width:40px;
+    //border:2px solid darkcyan;
+    //border-radius: 2px;
+    margin-right: 10px;
+    margin-top: 4px;
+    padding-left:3px;
+    padding-right: 3px;
+    font-family:monospace;
+    color:#FFFFFF;
+}
 body{
 //	background-image:url('../img/bg.jpg');
 	background-repeat:no-repeat;
 	background-position:right top;
-        font-family: myFirstFont;
+        font-family: Tahoma,sans-serif;
 }
 h1 a{
     text-decoration: none;
@@ -24,71 +71,35 @@ h1 a{
 	margin: auto;
 	box-shadow: 3px 3px 3px #000;
 }
-#menu{
-	background-color:#03008a;
-	padding-bottom: 5px;
-	padding-top: 5px;
-        height: 30px;
-}
-#menu ul{
-	list-style: none;
-        width: 70%;
-}
-#menu ul li{
-	display:inline-block;
-        margin:auto;
-        
-	
-}
 
-#menu ul  li a {
-	color:#FFFFFF;
-	text-decoration: none;
-        border:1px solid #FF0000;
-	border-top-left-radius: 5px;
-        border-top-right-radius: 5px;
-        background-color: #10008a;
-}
-#menu ul li a:hover{
-	
-        background: -webkit-linear-gradient(#f00000, #f0f000);
-        background: -moz-linear-gradient(#f00000, #f0f000);
-        background: -o-linear-gradient(#f00000, #f0f000);
-	border:1px solid #FF0000;
-	border-top-left-radius: 5px;
-        border-top-right-radius: 5px;
-        color:#000;
-        
-}
 
-#header{
- 	background-color:#01008a;
- 	color:#FFFFFF;
- 	text-align: center;
-}
+
 #ident{
     font-size: 75%;
+    display: inline-block;
+    width:50%;
+    height:30px;
+    float: right;
+    background-color: #000000;
 }
-#ident ul{list-style: none;text-align: right;background-color: #000000;}
-#ident ul li{display: inline-block;}
-#ident ul li a{color:#FFF;text-decoration: none;};
-#ident ul li a:hover {color:#000;}
+
+
 
 
 #content{
 	background-color:#EEEEEE;
-	height:410px;
+	height:420px;
 	
 }
 #footer{
-	background-color:#bbdafa;
+	background-color:darkkhaki;
         clear:both;
         text-align:center;
         height:30px;
         border:1px solid #bbdafa;
         border-bottom-left-radius: 5px;
         border-bottom-right-radius: 5px;
-        vertical-align: center;
+        vertical-align:middle;
 }
 #slide {
 	alignment-adjust: central;
@@ -102,7 +113,7 @@ h1 a{
 	box-shadow: 3px 3px 3px #000;
 }
 #formlog{
-    font-family: 'PT Sans', sans-serif;
+    font-family: Tahoma, sans-serif;
     font-size:90%;
     display:none;
     padding: 3px;
@@ -112,29 +123,12 @@ h1 a{
     height: 200px;
     float:left;
     margin: 0 auto;
-             
-             margin-top: 9%;
-             background: #000;
-             color: #fff;
-             border: 6px solid #dc2d29;
+    margin-top: 9%;
+    background: #000;
+    color: #fff;
+    border: 6px solid #dc2d29;
 }
-label{
-  display: inline-block;
-  }
- #formlog input[type=text],input[type=password]{
-            width: 220px;
-            padding: 8px 6px;
-            border-radius: 8px;
-        }
- #formlog input[type=submit]{
-            padding: 5px 60px;
-            text-align: center;
-            border-radius: 4px;
-            color: #fff;
-            background: #dc2d29; 
-            border: 1px solid #fff;
-            margin-top: 10px;
-        }
+
 .login{
     font-variant: small-caps;
 }
